# wFabricSecurity

./: .coveragerc  .gitignore  .pylintrc  .readthedocs.yaml  CNAME  Makefile  README.md  README_ES.md  README_complete.md  index.html  mychannel.block  prompt_desarrollo.txt  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  README.md  requirements.txt  wFabricSecurity_Technical_Documentation.tex
docs/source/: api_reference.rst  architecture.rst  bibliography.rst  changelog.rst  conf.py  faq.rst  getting_started.rst  glossary.rst  index.rst  installation.rst  tutorials.rst  usage.rst
docs/sources/: architecture.tex
enviroment/: Makefile  README.md  configtx.yaml  crypto-config.yaml  docker-compose-fabric.yaml  setup.sh
enviroment/chaincode/tasks/: go.mod  go.sum  tasks.go
enviroment/channel-artifacts/: Org1MSPanchors.tx  channel.tx  genesis.block
enviroment/p2p/: collections_config.json
examples/: Makefile  README.md  requirements.txt
examples/data/async/: README.md  master.py  slave.py
examples/data/base/: README.md  master.py  slave.py
examples/fabric/json/: master.py  slave.py
examples/image/async/: README.md  master.py  slave.py
examples/image/base/: README.md  master.py  slave.py
examples/json/async/: README.md  master.py  slave.py
examples/json/base/: README.md  master.py  slave.py
examples/p2p/async/: README.md  master.py  slave.py
examples/p2p/base/: README.md  master.py  slave.py
examples/test/: __init__.py  conftest.py  legacy_test_data.py  legacy_test_json.py  legacy_test_p2p.py  legacy_test_report.py  test_core.py  test_image.py  test_library.py  test_report.py  test_security.py  test_zero_trust.py
examples/test/reports/: test_report_20260321_002211.html  test_report_20260321_003817.html  test_report_20260321_004208.html  test_report_20260321_004311.html  test_report_20260321_020048.html  test_report_20260321_021511.html
test/: README.md  __init__.py  conftest.py  test_config.py  test_core.py  test_crypto.py  test_fabric.py  test_library.py  test_main.py  test_rate_retry.py  test_report_generator.py  test_security.py  test_storage.py
test/reports/: library_test_report_20260321_075154.html  library_test_report_20260321_081620.html  library_test_report_20260321_081644.html
wFabricSecurity/: README.md  __init__.py
wFabricSecurity/fabric_security/: README.md  __init__.py  cli.py  config.yaml  fabric_security.py
wFabricSecurity/fabric_security/config/: README.md  __init__.py  defaults.py  settings.py
wFabricSecurity/fabric_security/core/: README.md  __init__.py  enums.py  exceptions.py  models.py
wFabricSecurity/fabric_security/crypto/: README.md  __init__.py  hashing.py  identity.py  signing.py
wFabricSecurity/fabric_security/fabric/: README.md  __init__.py  (+3 more)
(+42 files in other folders)
