[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wFabricSecurity"
version = "1.0.1"
authors = [
    { name = "William Rodriguez", email = "william.rodriguez@ecapturedtech.com" },
]
description = "Zero Trust Security System for Hyperledger Fabric - Cryptographic identity verification, code integrity, and secure communication"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = [
    "hyperledger",
    "fabric",
    "security",
    "zero-trust",
    "cryptography",
    "ecdsa",
    "integrity",
    "blockchain",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=41.0.0",
    "ecdsa>=0.18.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
]
all = [
    "wFabricSecurity[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/wisrovi/wFabricSecurity"
Documentation = "https://wFabricSecurity.readthedocs.io/en/latest/"
Repository = "https://github.com/wisrovi/wFabricSecurity"
Issues = "https://github.com/wisrovi/wFabricSecurity/issues"
Changelog = "https://github.com/wisrovi/wFabricSecurity/blob/main/docs/source/changelog.rst"

[tool.hatch.build.targets.wheel]
packages = ["wFabricSecurity"]

[tool.hatch.build.targets.sdist]
include = [
    "/wFabricSecurity",
    "/README.md",
    "/LICENSE",
]
